# telephony-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: requirements.txt
app/src/: main.py
telephony_api/: Dockerfile  pyproject.toml
telephony_api/src/: main.py
telephony_api/src/crud/: call_record.py  generate_bill.py
telephony_api/src/database/: config.py  models.py  register.py
telephony_api/src/migrations/models/: 4_20241113050011_None.py
telephony_api/src/routes/: call_record.py
telephony_api/src/schemas/: call_record.py  phone_bill.py
telephony_api/tests/: test_main.py
